--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm I
+      - run: npm i
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
